--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@primeng/themes": "^19.0.6",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "dexie": "^4.0.11",
     "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
