Set up for MEL development

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "hrhapp": {
+    "melapp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/hrhapp",
+            "outputPath": "dist/melapp",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "hrhapp:build:production"
+              "buildTarget": "melapp:build:production"
             },
             "development": {
-              "buildTarget": "hrhapp:build:development",
+              "buildTarget": "melapp:build:development",
               "proxyConfig": "proxy.config.json"
             }
           },
