--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hrhapp",
+  "name": "melapp",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --configuration production --aot && cd dist/hrhapp && zip -r -D hrhapp.zip .",
+    "start": "ng serve --port 4204",
+    "build": "ng build --configuration production --aot && cd dist/melapp && zip -r -D melapp.zip .",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
