--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.5.0",
     "dexie": "^4.0.11",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
     "quill": "^2.0.3",
